--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -37,3 +37,79 @@ html, body {
 main {
     flex-grow: 1;
 }
+
+h1 {
+    font-size: 64px;
+}
+
+h2 {
+    font-size: 52px;
+}
+
+h3 { 
+    font-size: 44px;
+}
+
+h4 {
+    font-size: 32px;
+}
+
+h5 {
+    font-size: 28px;
+}
+
+h6 {
+    font-size: 24px;
+}
+
+@media only screen and (max-width: 900px) {
+    h1 {
+        font-size: 50px;
+    }
+    
+    h2 {
+        font-size: 44px;
+    }
+    
+    h3 { 
+        font-size: 36px;
+    }
+    
+    h4 {
+        font-size: 28px;
+    }
+    
+    h5 {
+        font-size: 24px;
+    }
+    
+    h6 {
+        font-size: 22px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 44px;
+    }
+    
+    h2 {
+        font-size: 38px;
+    }
+    
+    h3 { 
+        font-size: 32px;
+    }
+    
+    h4 {
+        font-size: 24px;
+    }
+    
+    h5 {
+        font-size: 22px;
+    }
+    
+    h6 {
+        font-size: 18px;
+    }
+}
