--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -34,6 +34,10 @@ html, body {
     flex-direction: column;
 }
 
+p {
+    line-height: 1.3;
+}
+
 main {
     flex-grow: 1;
 }
@@ -60,6 +64,10 @@ h5 {
 
 h6 {
     font-size: 24px;
+}
+
+section {
+    padding: calc(var(--uint) * 12) 0;
 }
 
 @media only screen and (max-width: 900px) {
@@ -111,5 +119,9 @@ h6 {
     
     h6 {
         font-size: 18px;
+    }
+
+    section {
+        padding: calc(var(--uint) * 8) 0;
     }
 }
