--- a/src/sections/Mixing/Form/Steps/CreateOrder/styles.module.css
+++ b/src/sections/Mixing/Form/Steps/CreateOrder/styles.module.css
@@ -1,3 +1,27 @@
 .hint {
-    margin-bottom: calc(var(--uint) * 3);
+    margin-bottom: calc(var(--uint) * 4);
+}
+
+.form > div {
+    margin-bottom: calc(var(--uint) * 4);
+}
+
+.feeForAddress {
+    font-size: var(--body2);
+    margin-top: calc(var(--uint) * 0.5);
+}
+
+.priority {
+    font-size: var(--body2);
+    margin-top: calc(var(--uint) * 2);
+}
+
+.priority svg {
+    transform: translateY(-10%);
+    vertical-align: middle;
+}
+
+.priority span {
+    font-weight: 500;
+    color: var(--primary);
 }
