--- a/src/sections/Mixing/Form/UserPath/styles.module.css
+++ b/src/sections/Mixing/Form/UserPath/styles.module.css
@@ -1,51 +1,81 @@
 .steps {
-    display: flex;
-    text-align: center;
+  display: flex;
+  text-align: center;
 }
 
 .step {
-    width: calc(100% / 3);
-    position: relative;
-    color: var(--grey);
+  width: calc(100% / 3);
+  position: relative;
+  color: var(--grey);
 }
 
 .step:not(:last-of-type)::after {
-    content: '';
-    position: absolute;
-    top: 24px;
-    left: 50%;
-    width: 100%;
-    z-index: 0;
-    border-top: 2px dashed var(--primary);
+  content: "";
+  position: absolute;
+  top: 24px;
+  left: 50%;
+  width: 100%;
+  z-index: 0;
+  border-top: 2px dashed var(--primary);
 }
 
 .stepIcon {
-    position: relative;
-    background: var(--grey);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 48px;
-    height: 48px;
-    border-radius: calc(var(--uint) * 0.5);
-    margin-bottom: calc(var(--uint) * 1);
-    z-index: 1;
+  position: relative;
+  background: var(--grey);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border-radius: calc(var(--uint) * 0.5);
+  margin-bottom: calc(var(--uint) * 1);
+  z-index: 1;
 }
 
 .stepIcon svg {
-    width: 32px;
-    height: 32px;
-    color: var(--bg);
+  width: 32px;
+  height: 32px;
+  color: var(--bg);
 }
 
 .active {
-    color: var(--white);
+  color: var(--white);
 }
 
 .active .stepIcon {
-    background: var(--white);
+  background: var(--white);
 }
 
 .active .stepTitle {
-    font-weight: 500;
-} 
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 600px) {
+  .steps {
+    flex-direction: column;
+    row-gap: calc(var(--uint) * 1);
+    text-align: left;
+  }
+
+  .step:not(:last-of-type)::after {
+    display: none;
+  }
+
+  .stepIcon {
+    width: 36px;
+    height: 36px;
+    margin-bottom: 0;
+  }
+
+  .stepIcon svg {
+    width: 24px;
+    height: 24px;
+  }
+
+  .step {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    column-gap: calc(var(--uint) * 2);
+  }
+}
