--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -6,7 +6,9 @@
     --fs-small: 0.75rem;
 
     --white: #fff;
+    --black: #020201;
     --grey: #8e9396;
+    --disabled: #575757;
 
     --primary: #fbca1c;
     --primary-hover: #fcd64e;
