--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -9,12 +9,14 @@
     --black: #020201;
     --grey: #8e9396;
     --disabled: #575757;
+    --error: #ff4141;
 
     --primary: #fbca1c;
     --primary-hover: #fcd64e;
 
     --bg: #020201;
-    --bg1: #161616;
+    --bg1: #242323;
+    --bg-input: #020201;
 
     --uint: 8px;
 }
