--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -8,7 +8,8 @@
     --white: #fff;
     --black: #020201;
     --grey: #8e9396;
-    --disabled: #575757;
+    --grey1: #b9b9b9;
+    --disabled: #525252;
     --error: #ff4141;
     --delete: #E44479;
     --delete-hover: rgba(228,68,121, 0.1);
