--- a/src/sections/Mixing/Form/Steps/CreateOrder/Addresses/Address/styles.module.css
+++ b/src/sections/Mixing/Form/Steps/CreateOrder/Addresses/Address/styles.module.css
@@ -1,7 +1,7 @@
 .root {
     display: flex;
     align-items: flex-start;
-    gap: var(--uint)
+    gap: var(--uint);
 }
 
 .addressActions {
@@ -9,7 +9,7 @@
     align-items: center;
     max-width: 204px;
     min-width: 204px;
-    gap: var(--uint)
+    gap: var(--uint);
 }
 
 .addressStats {
@@ -96,4 +96,10 @@
 .delete svg {
     width: 28px;
     height: 28px;
+}
+
+@media only screen and (max-width: 600px) {
+    .root {
+        flex-direction: column;
+    }
 }
